# local-scribe

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.sh
app/: Dockerfile  base_schema.py  extraction.py  main.py  pdf_utils.py  system_prompt.md  transcription.py
app/frontend/: index.html
formats/abc/: schema.py
formats/example/: schema.py
formats/example_rows/: schema.py
formats/example_single/: schema.py
tests/: abc_ez.m4a  abc_hard.m4a  medical_hard.m4a  medical_medicine.m4a  medical_test.m4a
