[project]
name = "local-scribe"
version = "0.1.0"
description = "Local app to transcribe verbal speech into structured formats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "faster-whisper>=1.2.1",
    "instructor>=1.4.0",
    "jinja2>=3.1.6",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
    "weasyprint>=68.1",
]
